fix cloud.ibm.com links

--- a/.bluemix/nls/messages_de.yml
+++ b/.bluemix/nls/messages_de.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Clustername"
 deploy.imageRegistryNamespace: "Namespace der Image-Registry"
 deploy.apiKey: "IBM Cloud-API-Schlüssel"
 deploy.regionDescription: "Die IBM Cloud-Region"
-deploy.clusterNote: "Rufen Sie den Namen des Kubernetes-Clusters mit dem CLI-Befehl 'bx cs clusters' oder über die [Konsole](https://console.bluemix.net/containers-kubernetes/home/clusters) ab."
+deploy.clusterNote: "Rufen Sie den Namen des Kubernetes-Clusters mit dem CLI-Befehl 'bx cs clusters' oder über die [Konsole](https://cloud.ibm.com/containers-kubernetes/home/clusters) ab."
 region: "Region"
 prodStage: "Produktionsphase"
 headerSVG.think: "NACHDENKEN"
