--- a/.bluemix/nls/messages_en_RR.yml
+++ b/.bluemix/nls/messages_en_RR.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Cluster Name~otc-ui968"
 deploy.imageRegistryNamespace: "Image Registry Namespace~otc-ui969"
 deploy.apiKey: "IBM Cloud API Key~otc-ui970"
 deploy.regionDescription: "The IBM Cloud region~otc-ui971"
-deploy.clusterNote: "Retrieve the Kubernetes cluster name with the CLI command 'bx cs clusters' or via the [console](https://console.bluemix.net/containers-kubernetes/home/clusters).~otc-ui972"
+deploy.clusterNote: "Retrieve the Kubernetes cluster name with the CLI command 'bx cs clusters' or via the [console](https://cloud.ibm.com/containers-kubernetes/home/clusters).~otc-ui972"
 region: "Region~otc-ui973"
 prodStage: "Production stage~otc-ui974"
 headerSVG.think: "THINK~otc-ui975"
