--- a/.bluemix/nls/messages_es.yml
+++ b/.bluemix/nls/messages_es.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Nombre de clúster"
 deploy.imageRegistryNamespace: "Espacio de nombres de registro de imágenes"
 deploy.apiKey: "Clave de API de IBM Cloud"
 deploy.regionDescription: "La región de IBM Cloud"
-deploy.clusterNote: "Recupere el nombre del clúster de Kubernetes con el mandato de CLI 'bx cs clusters' o a través de la [consola](https://console.bluemix.net/containers-kubernetes/home/clusters)."
+deploy.clusterNote: "Recupere el nombre del clúster de Kubernetes con el mandato de CLI 'bx cs clusters' o a través de la [consola](https://cloud.ibm.com/containers-kubernetes/home/clusters)."
 region: "Región"
 prodStage: "Fase de producción"
 headerSVG.think: "CONSIDERAR"
