--- a/.bluemix/nls/messages_fr.yml
+++ b/.bluemix/nls/messages_fr.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Nom du cluster"
 deploy.imageRegistryNamespace: "Espace de nom du registre d'images"
 deploy.apiKey: "Clé d'API IBM Cloud"
 deploy.regionDescription: "Région IBM Cloud"
-deploy.clusterNote: "Récupérez le nom du cluster Kubernetes à l'aide de la commande CLI 'bx cs clusters' ou via la [console](https://console.bluemix.net/containers-kubernetes/home/clusters)."
+deploy.clusterNote: "Récupérez le nom du cluster Kubernetes à l'aide de la commande CLI 'bx cs clusters' ou via la [console](https://cloud.ibm.com/containers-kubernetes/home/clusters)."
 region: "Région"
 prodStage: "Etape de production"
 headerSVG.think: "PENSER"
