--- a/.bluemix/nls/messages_pt_BR.yml
+++ b/.bluemix/nls/messages_pt_BR.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Nome do cluster"
 deploy.imageRegistryNamespace: "Namespace do registro de imagem"
 deploy.apiKey: "Chave API do IBM Cloud"
 deploy.regionDescription: "A região do IBM Cloud"
-deploy.clusterNote: "Recupere o nome do cluster do Kubernetes com o comando da CLI 'bx cs clusters' ou por meio do [console](https://console.bluemix.net/containers-kubernetes/home/clusters)."
+deploy.clusterNote: "Recupere o nome do cluster do Kubernetes com o comando da CLI 'bx cs clusters' ou por meio do [console](https://cloud.ibm.com/containers-kubernetes/home/clusters)."
 region: "Região"
 prodStage: "Estágio de produção"
 headerSVG.think: "PENSAR"
