--- a/.bluemix/nls/messages_en_ZZ.yml
+++ b/.bluemix/nls/messages_en_ZZ.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Cluster Name"
 deploy.imageRegistryNamespace: "Image Registry Namespace"
 deploy.apiKey: "IBM Cloud API Key"
 deploy.regionDescription: "The IBM Cloud region"
-deploy.clusterNote: "Retrieve the Kubernetes cluster name with the CLI command 'bx cs clusters' or via the [console](https://console.bluemix.net/containers-kubernetes/home/clusters)."
+deploy.clusterNote: "Retrieve the Kubernetes cluster name with the CLI command 'bx cs clusters' or via the [console](https://cloud.ibm.com/containers-kubernetes/home/clusters)."
 region: "Region"
 prodStage: "Production stage"
 headerSVG.think: "THINK"
