--- a/.bluemix/nls/messages_it.yml
+++ b/.bluemix/nls/messages_it.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "Nome cluster"
 deploy.imageRegistryNamespace: "Spazio dei nomi registro immagine"
 deploy.apiKey: "Chiave API IBM Cloud"
 deploy.regionDescription: "Regione IBM Cloud"
-deploy.clusterNote: "Richiamare il nome del cluster Kubernetes con il comando CLI 'bx cs clusters' oppure mediante la [console](https://console.bluemix.net/containers-kubernetes/home/clusters)."
+deploy.clusterNote: "Richiamare il nome del cluster Kubernetes con il comando CLI 'bx cs clusters' oppure mediante la [console](https://cloud.ibm.com/containers-kubernetes/home/clusters)."
 region: "Regione"
 prodStage: "Stage di produzione"
 headerSVG.think: "PENSA"
