--- a/.bluemix/nls/messages_ja.yml
+++ b/.bluemix/nls/messages_ja.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "クラスター名"
 deploy.imageRegistryNamespace: "イメージ・レジストリー名前空間"
 deploy.apiKey: "IBM Cloud API キー"
 deploy.regionDescription: "IBM Cloud リージョン"
-deploy.clusterNote: "CLI コマンド「bx cs clusters」を使用して、または[コンソール](https://console.bluemix.net/containers-kubernetes/home/clusters) で Kubernetes クラスター名を取得します。"
+deploy.clusterNote: "CLI コマンド「bx cs clusters」を使用して、または[コンソール](https://cloud.ibm.com/containers-kubernetes/home/clusters) で Kubernetes クラスター名を取得します。"
 region: "リージョン"
 prodStage: "実動ステージ"
 headerSVG.think: "思考"
