--- a/.bluemix/nls/messages_zh_TW.yml
+++ b/.bluemix/nls/messages_zh_TW.yml
@@ -15,7 +15,7 @@ deploy.clusterName: "叢集名稱"
 deploy.imageRegistryNamespace: "映像檔登錄名稱空間"
 deploy.apiKey: "IBM Cloud API 金鑰"
 deploy.regionDescription: "IBM Cloud 區域"
-deploy.clusterNote: "使用 CLI 指令 'bx cs clusters' 或透過[主控台](https://console.bluemix.net/containers-kubernetes/home/clusters)來擷取 Kubernetes 叢集名稱。"
+deploy.clusterNote: "使用 CLI 指令 'bx cs clusters' 或透過[主控台](https://cloud.ibm.com/containers-kubernetes/home/clusters)來擷取 Kubernetes 叢集名稱。"
 region: "區域"
 prodStage: "正式作業階段"
 headerSVG.think: "思考"
