--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -50,7 +50,7 @@ stages:
       fi 
       # also run 'env' command to find all available env variables
       # or learn more about the available environment variables at:
-      # https://console.bluemix.net/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+      # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
 
       echo "=========================================================="
       echo "Checking for Dockerfile at the repository root"
@@ -140,7 +140,7 @@ stages:
       fi 
       # also run 'env' command to find all available env variables
       # or learn more about the available environment variables at:
-      # https://console.bluemix.net/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+      # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
 
       # To review or change build options use:
       # bx cr build --help
@@ -264,7 +264,7 @@ stages:
 
       # also run 'env' command to find all available env variables
       # or learn more about the available environment variables at:
-      # https://console.bluemix.net/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+      # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
 
       bx cr images --restrict ${REGISTRY_NAMESPACE}/${IMAGE_NAME}
       echo -e "Checking vulnerabilities in image: ${PIPELINE_IMAGE_URL}"
@@ -340,7 +340,7 @@ stages:
       fi 
       # also run 'env' command to find all available env variables
       # or learn more about the available environment variables at:
-      # https://console.bluemix.net/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+      # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
 
       # Input env variables from pipeline job
       echo "PIPELINE_KUBERNETES_CLUSTER_NAME=${PIPELINE_KUBERNETES_CLUSTER_NAME}"
@@ -372,7 +372,7 @@ stages:
       fi
 
       # Grant access to private image registry from namespace $CLUSTER_NAMESPACE
-      # reference https://console.bluemix.net/docs/containers/cs_cluster.html#bx_registry_other
+      # reference https://cloud.ibm.com/docs/containers/cs_cluster.html#bx_registry_other
       echo "=========================================================="
       echo -e "CONFIGURING ACCESS to private image registry from namespace ${CLUSTER_NAMESPACE}"
       IMAGE_PULL_SECRET_NAME="ibmcloud-toolchain-${PIPELINE_TOOLCHAIN_ID}-${REGISTRY_URL}"
@@ -426,7 +426,7 @@ stages:
       # cat build.properties
       # also run 'env' command to find all available env variables
       # or learn more about the available environment variables at:
-      # https://console.bluemix.net/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+      # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
 
       # Input env variables from pipeline job
       echo "PIPELINE_KUBERNETES_CLUSTER_NAME=${PIPELINE_KUBERNETES_CLUSTER_NAME}"
