--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -303,7 +303,10 @@ stages:
     type: text
   - name: DEPLOYMENT_FILE
     value: deployment.yml
-    type: text      
+    type: text
+  - name: APP_URL
+    value: undefined
+    type: text   
   jobs:
   - name: Pre-deploy check
     type: deployer
@@ -478,7 +481,7 @@ stages:
         sleep 5
       done
 
-      APP_NAME=$(kubectl get pods --namespace ${CLUSTER_NAMESPACE} -o json | jq -r '.items[].status | select(.containerStatuses!=null) | .containerStatuses[] | select(.image=="'"${IMAGE_REPOSITORY}:${IMAGE_TAG}"'") | .name' | head -n 1)
+      APP_NAME=$(kubectl get pods --namespace ${CLUSTER_NAMESPACE} -o json | jq -r '[.items[] | select(.spec.containers[]?.image=="'"${IMAGE_REPOSITORY}:${IMAGE_TAG}"'")] | first | .metadata.labels.app')
       echo -e "APP: ${APP_NAME}"
       echo "DEPLOYED PODS:"
       kubectl describe pods --selector app=${APP_NAME} --namespace ${CLUSTER_NAMESPACE}
@@ -506,5 +509,66 @@ stages:
         IP_ADDR=$(bx cs workers ${PIPELINE_KUBERNETES_CLUSTER_NAME} | grep normal | head -n 1 | awk '{ print $2 }')
         PORT=$( kubectl get services --namespace ${CLUSTER_NAMESPACE} | grep ${APP_SERVICE} | sed 's/.*:\([0-9]*\).*/\1/g' )
         echo ""
-        echo -e "VIEW THE APPLICATION AT: http://${IP_ADDR}:${PORT}"
+        export APP_URL=http://${IP_ADDR}:${PORT}
+        echo -e "VIEW THE APPLICATION AT: http://${APP_URL}"
+      fi
+  - name: Health check
+    type: deployer
+    target:
+      region_id: ${PROD_REGION_ID}
+      resource_group: ${PROD_RESOURCE_GROUP}
+      api_key: ${API_KEY}
+      kubernetes_cluster: ${PROD_CLUSTER_NAME}
+    script: |-
+      #!/bin/bash
+      # uncomment to debug the script
+      # set -x
+      # copy the script below into your app code repo (e.g. ./scripts/check_health.sh) and 'source' it from your pipeline job
+      #    source ./scripts/check_health.sh
+      # alternatively, you can source it from online script:
+      #    source <(curl -sSL "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_health.sh")
+      # ------------------
+      # source: https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_health.sh
+      # Check liveness and readiness probes to confirm application is healthy
+      # Input env variables (can be received via a pipeline environment properties.file.
+      echo "IMAGE_NAME=${IMAGE_NAME}"
+      echo "IMAGE_TAG=${IMAGE_TAG}"
+      echo "REGISTRY_URL=${REGISTRY_URL}"
+      echo "REGISTRY_NAMESPACE=${REGISTRY_NAMESPACE}"
+      echo "CLUSTER_NAMESPACE=${CLUSTER_NAMESPACE}"
+      echo "APP_URL=${APP_URL}"
+
+      IMAGE_REPOSITORY=${REGISTRY_URL}/${REGISTRY_NAMESPACE}/${IMAGE_NAME}
+
+      CONTAINERS_JSON=$(kubectl get deployments --namespace ${CLUSTER_NAMESPACE} -o json | jq -r ".items[].spec.template.spec.containers[]? | select(.image==\"${IMAGE_REPOSITORY}:${IMAGE_TAG}\") ")
+      echo $CONTAINERS_JSON | jq .
+
+      LIVENESS_PROBE_PATH=$(echo $CONTAINERS_JSON | jq -r ".livenessProbe.httpGet.path" | head -n 1)
+      # LIVENESS_PROBE_PORT=$(echo $CONTAINERS_JSON | jq -r ".livenessProbe.httpGet.port" | head -n 1)
+      if [ ${LIVENESS_PROBE_PATH} != null ]; then
+        LIVENESS_PROBE_URL=${APP_URL}${LIVENESS_PROBE_PATH}
+        if [ "$(curl -Is ${LIVENESS_PROBE_URL} --connect-timeout 3 --max-time 5 --retry 2 --retry-max-time 30 | head -n 1 | grep 200)" != "" ]; then
+          echo "Successfully reached liveness probe endpoint: ${LIVENESS_PROBE_URL}"
+          echo "====================================================================="
+        else
+          echo "Could not reach liveness probe endpoint: ${LIVENESS_PROBE_URL}"
+          exit 1;
+        fi
+      else
+        echo "No liveness probe endpoint defined (should be specified in deployment resource."
+      fi
+
+      READINESS_PROBE_PATH=$(echo $CONTAINERS_JSON | jq -r ".readinessProbe.httpGet.path" | head -n 1)
+      # READINESS_PROBE_PORT=$(echo $CONTAINERS_JSON | jq -r ".readinessProbe.httpGet.port" | head -n 1)
+      if [ ${READINESS_PROBE_PATH} != null ]; then
+        READINESS_PROBE_URL=${APP_URL}${READINESS_PROBE_PATH}
+        if [ "$(curl -Is ${READINESS_PROBE_URL} --connect-timeout 3 --max-time 5 --retry 2 --retry-max-time 30 | head -n 1 | grep 200)" != "" ]; then
+          echo "Successfully reached readiness probe endpoint: ${READINESS_PROBE_URL}"
+          echo "====================================================================="
+        else
+          echo "Could not reach readiness probe endpoint: ${READINESS_PROBE_URL}"
+          exit 1;
+        fi
+      else
+        echo "No readiness probe endpoint defined (should be specified in deployment resource."
       fi
