--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -78,7 +78,7 @@ services:
   pr_build:
     $switch:
       - $expr: $env.enablePrPipeline
-      - $case: undefined
+      #- $case: undefined
       - $case: true
         $ref: pr_build.yml
   webide:
