--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -90,7 +90,7 @@ services:
           PROD_CLUSTER_NAME: "{{form.pipeline.parameters.prod-cluster-name}}"
           PROD_CLUSTER_NAMESPACE: "{{form.pipeline.parameters.prod-cluster-namespace}}"
           APP_REPO_FULL: >
-            if($env.source_provider !== undefined){
+            if($env.source_provider !== 'undefined'){
               if($env.source_provider === 'hostedgit' && $env.env_id === 'ibm:yp:au-syd'){
                 "https://au-syd.git.cloud.ibm.com/{{services.repo.parameters.owner_id}}/{{services.repo.parameters.repo_name}}"
               } else if($env.source_provider === 'gitlab'){
