--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -91,7 +91,7 @@ services:
           PROD_CLUSTER_NAMESPACE: "{{form.pipeline.parameters.prod-cluster-namespace}}"
           APP_REPO_FULL: >
             if($env.source_provider !== 'undefined'){
-              if($env.source_provider === 'hostedgit' && $env.env_id === 'ibm:yp:au-syd'){
+              if($env.source_provider === 'hostedgit'){
                 "https://au-syd.git.cloud.ibm.com/{{services.repo.parameters.owner_id}}/{{services.repo.parameters.repo_name}}"
               } else if($env.source_provider === 'gitlab'){
                 "https://gitlab.com/{{services.repo.parameters.owner_id}}/{{services.repo.parameters.repo_name}}";
@@ -106,6 +106,10 @@ services:
               if($env.env_id === 'ibm:yp:au-syd'){
                 "https://au-syd.git.cloud.ibm.com/{{services.repo.parameters.owner_id}}/{{services.repo.parameters.repo_name}}"
               }
+            }
+            else {
+              if($env.env_id === 'ibm:yp:au-syd'){
+                "https://au-syd.git.cloud.ibm.com/{{services.repo.parameters.owner_id}}/{{services.repo.parameters.repo_name}}"
             }
           PIPELINE_REPO: pipeline-repo
           PIPELINE_REPO_BRANCH: >
