--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -12,10 +12,10 @@ template:
   required:
     - build
     - repo
-  $configuration:
-    ENABLE_EXTENSIONS: true
-    ENABLE_IF_ELSE: true
-    EXPRESSION_MAXLENGTH: 10000
+  #$configuration:
+    #ENABLE_EXTENSIONS: true
+    #ENABLE_IF_ELSE: true
+    #EXPRESSION_MAXLENGTH: 10000
   info:
     git url: >
       "[" + $env.repository + "]" +
