--- a/.pr-pipeline/pr-pipeline.yaml
+++ b/.pr-pipeline/pr-pipeline.yaml
@@ -25,6 +25,8 @@ spec:
       description: the git repo containing source code. If empty, the repository url will be found from toolchain
       default: ""
     - name: apikey
+    - name: commeditor-tag
+      default: ""
   workspaces:
     - name: pipeline-ws
 
@@ -139,6 +141,8 @@ spec:
           value: git-token
         - name: ibmcloud-api-key
           value: $(params.apikey)
+        - name: commeditor-tag
+          value: ""
     - name: code-vulnerability-scan-status-finished
       runAfter:
         - code-vulnerability-scan
