--- a/.pipeline/pipeline.yaml
+++ b/.pipeline/pipeline.yaml
@@ -52,6 +52,8 @@ spec:
       description: pr url
       default: ""
     - name: apikey
+    - name: commit-timestamp
+      description: commit timestamp
   workspaces:
     - name: pipeline-ws
   tasks:
@@ -167,9 +169,7 @@ spec:
         - name: directory-name
           value: "" 
         - name: commit-timestamp
-          value: |
-            TIMESTAMP=$( date -u "+%Y%m%d%H%M%S")
-            echo "$TIMESTAMP"
+          value: $(params.commit-timestamp) 
     - name: code-vulnerability-scan
       runAfter:
         - cra-discovery-scan
