--- a/.pr-pipeline/pr-listener.yaml
+++ b/.pr-pipeline/pr-listener.yaml
@@ -2,10 +2,32 @@
 apiVersion: tekton.dev/v1beta1
 kind: EventListener
 metadata:
-  name: pr-listener
+  name: github-pr-listener
 spec:
   triggers:
-    - binding:
-        name: pr-binding
+    - bindings:  
+        - name: github-pr-binding   
+      template:
+        name: pr-template
+---
+apiVersion: tekton.dev/v1beta1
+kind: EventListener
+metadata:
+  name: gitlab-pr-listener
+spec:
+  triggers:
+    - bindings:   
+        - name: gitlab-pr-binding
+      template:
+        name: pr-template
+---        
+apiVersion: tekton.dev/v1beta1
+kind: EventListener
+metadata:
+  name: github-ent-pr-listener
+spec:
+  triggers:
+    - bindings: 
+        - name: github-ent-pr-binding   
       template:
         name: pr-template
