--- a/.pipeline/pipeline.yaml
+++ b/.pipeline/pipeline.yaml
@@ -54,6 +54,11 @@ spec:
     - name: apikey
     - name: commit-timestamp
       description: commit timestamp
+    - name: scm-type
+      description: source code type used (github, github-ent, gitlab)
+    - name: project-id
+      description: project id
+      default: ""
   workspaces:
     - name: pipeline-ws
   tasks:
@@ -193,6 +198,8 @@ spec:
           value: git-token
         - name: ibmcloud-api-key
           value: $(params.apikey)
+        - name: scm-type
+          value: $(params.scm-type)
 
     - name: cra-cis-check
       taskRef:
@@ -217,6 +224,8 @@ spec:
           value: ""
         - name: ibmcloud-api-key
           value: $(params.apikey)
+        - name: scm-type
+          value: $(params.scm-type)
     - name: cra-bom
       taskRef:
         name: cra-bom
@@ -242,6 +251,8 @@ spec:
           value: $(tasks.git-clone.results.git-commit)      
         - name: ibmcloud-api-key
           value: $(params.apikey)
+        - name: scm-type
+          value: $(params.scm-type)
     - name: containerize
       runAfter: [unit-tests]
       taskRef:
