--- a/.bluemix/pr_pipeline_tekton.yml
+++ b/.bluemix/pr_pipeline_tekton.yml
@@ -13,9 +13,9 @@ inputs:
     branch: master
     path: toolchain
   - type: git
-    branch: main
-    service: ${TEKTON_GITSECURE}
-    path: gitsecure
+    branch: master
+    service: ${TEKTON_CATALOG_REPO}
+    path: cra
   - type: git
     branch: master
     service: ${TEKTON_CATALOG_REPO}
