--- a/.bluemix/pipeline_tekton.yml
+++ b/.bluemix/pipeline_tekton.yml
@@ -22,7 +22,7 @@ inputs:
     path: toolchain
   - type: git
     branch: cra-rc2
-    service: ${TEKTON_CATALOG_REPO}
+    service: ${TEKTON_CATALOG_REPO_NADGOWDAS}
     path: cra
   - type: git
     service: ${TEKTON_CATALOG_REPO}
