--- a/.bluemix/pr_pipeline_tekton.yml
+++ b/.bluemix/pr_pipeline_tekton.yml
@@ -14,7 +14,7 @@ inputs:
     path: toolchain
   - type: git
     branch: cra-rc2
-    service: ${TEKTON_CATALOG_REPO}
+    service: ${TEKTON_CATALOG_REPO_NADGOWDAS}
     path: cra
   - type: git
     branch: master
